--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
         android:theme="@style/Theme.Azurah"
         tools:targetApi="31">
         <activity
+            android:name=".activity.ReferralActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.SubscriptionActivity"
             android:exported="false" />
         <activity
@@ -88,8 +91,8 @@
             android:exported="false" />
         <activity
             android:name=".activity.MembersActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activity.BookmarkSavedEventActivity"
             android:exported="false"
@@ -127,7 +130,6 @@
         <activity
             android:name=".activity.ChatActivity"
             android:exported="false" />
-
         <activity
             android:name=".activity.NotificationActivity"
             android:exported="false" />
@@ -139,8 +141,8 @@
             android:exported="false" />
         <activity
             android:name=".activity.ContactUsActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".activity.HelpCenterActivity"
             android:exported="false" />
@@ -170,9 +172,9 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:scheme="https"
                     android:host="app.azrius.co.uk"
-                    android:pathPrefix="/common_api/deepLinking" />
+                    android:pathPrefix="/common_api/deepLinking"
+                    android:scheme="https" />
             </intent-filter>
         </activity>
         <activity
@@ -205,8 +207,8 @@
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activity.MessageActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activity.GuidelineParticipationActivity"
             android:exported="true" />
@@ -234,7 +236,7 @@
         <activity
             android:name=".activity.HomeActivity"
             android:exported="false"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activity.NewPasswordActivity"
             android:exported="false" />
@@ -267,7 +269,6 @@
             android:name="com.yalantis.ucrop.UCropActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-
         <activity
             android:name=".activity.SplashActivity"
             android:exported="true">
@@ -302,7 +303,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
