--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,21 @@
             android:exported="false" />
         <activity
             android:name=".activity.ViewPostActivity"
-            android:exported="false" />
+            android:exported="true">
+
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="app.azrius.co.uk"
+                    android:pathPrefix="/common_api/deepLinking/post"
+                    android:scheme="https" />
+            </intent-filter>
+
+        </activity>
         <activity
             android:name=".activity.PlayerActivity"
             android:exported="false" />
@@ -173,7 +187,7 @@
 
                 <data
                     android:host="app.azrius.co.uk"
-                    android:pathPrefix="/common_api/deepLinking"
+                    android:pathPrefix="/common_api/deepLinking/profile"
                     android:scheme="https" />
             </intent-filter>
         </activity>
